NetrixDemo/CodeEditorLib/Imaging/FreeImage/Wrapper/FreeImage.NET/src/FreeImage.cs

		
		[DllImport(dllName, EntryPoint="FreeImage_GetCopyrightMessage")]
		public static extern string GetCopyrightMessage();
	
		// Message Output routines ------------------------------------
		
		[DllImport(dllName, EntryPoint="FreeImage_SetOutputMessage")]
		public static extern void SetOutputMessage(FreeImage_OutputMessageFunction omf);
		
		// Allocate / Clone / Unload routines ---------------------------------------

		[DllImport(dllName, EntryPoint="FreeImage_Allocate")]
		public static extern FIBITMAP Allocate(int width, int height, 
				int bpp, uint red_mask, uint green_mask, uint blue_mask);
		
		[DllImport(dllName, EntryPoint="FreeImage_AllocateT")]
		public static extern FIBITMAP AllocateT(FREE_IMAGE_TYPE ftype, int width, 
				int height, int bpp, uint red_mask, uint green_mask, uint blue_mask);
		
		[DllImport(dllName, EntryPoint="FreeImage_Clone")]
		public static extern FIBITMAP Clone(FIBITMAP dib);
		
		[DllImport(dllName, EntryPoint="FreeImage_Unload")]
		public static extern void Unload(FIBITMAP dib);
		
		// Load / Save routines -----------------------------------------------------

		[DllImport(dllName, EntryPoint="FreeImage_Load")]
		public static extern FIBITMAP Load(FREE_IMAGE_FORMAT format, string filename, int flags);
	
		// missing FIBITMAP FreeImage_LoadFromHandle(FREE_IMAGE_FORMAT fif,
		// 				FreeImageIO *io, fi_handle handle, int flags);

		[DllImport(dllName, EntryPoint="FreeImage_Save")]
		public static extern bool Save(FREE_IMAGE_FORMAT format, FIBITMAP dib, string filename, int flags);
		
		// missing BOOL FreeImage_SaveToHandle(FREE_IMAGE_FORMAT fif, FIBITMAP *dib,
		// 				FreeImageIO *io, fi_handle handle, int flags);
		
		// Memory I/O stream routines -----------------------------------------------

		[DllImport(dllName, EntryPoint="FreeImage_OpenMemory")] 
		public static extern FIMEMORY OpenMemory(IntPtr bits, Int32 size_in_bytes);  
 
		[DllImport(dllName, EntryPoint="FreeImage_CloseMemory")] 
		public static extern void CloseMemory(FIMEMORY stream); 
 
		[DllImport(dllName, EntryPoint="FreeImage_LoadFromMemory")] 
		public static extern FIBITMAP LoadFromMemory(FREE_IMAGE_FORMAT fif, FIMEMORY stream, int flags); 
 
		[DllImport(dllName, EntryPoint="FreeImage_SaveToMemory")] 
		public static extern bool SaveToMemory(FREE_IMAGE_FORMAT fif, FIBITMAP dib, FIMEMORY stream, int flags); 
 
		[DllImport(dllName, EntryPoint="FreeImage_TellMemory")] 
		public static extern long TellMemory(FIMEMORY stream, int flags); 
 
		[DllImport(dllName, EntryPoint="FreeImage_SeekMemory")] 
		public static extern bool SeekMemory(FIMEMORY stream, long offset, int origin); 
 
		[DllImport(dllName, EntryPoint="FreeImage_AcquireMemory")] 
		public static extern long AcquireMemory(FIMEMORY stream, ref IntPtr data, ref int size_in_bytes); 
 

		// Plugin interface -------------------------------------------

		// missing FREE_IMAGE_FORMAT FreeImage_RegisterLocalPlugin(FI_InitProc proc_address, 
		// 				const char *format, const char *description, 
		// 				const char *extension, const char *regexpr);
		//
		// missing FREE_IMAGE_FORMAT FreeImage_RegisterExternalPlugin(const char *path,
		// 				const char *format, const char *description,
		// 				const char *extension, const char *regexpr);
		
		[DllImport(dllName, EntryPoint="FreeImage_GetFIFCount")]
		public static extern int GetFIFCount();
		
		[DllImport(dllName, EntryPoint="FreeImage_SetPluginEnabled")]
		public static extern int SetPluginEnabled(FREE_IMAGE_FORMAT format, bool enabled);
		
		[DllImport(dllName, EntryPoint="FreeImage_IsPluginEnabled")]
		public static extern int IsPluginEnabled(FREE_IMAGE_FORMAT format);
		
		[DllImport(dllName, EntryPoint="FreeImage_GetFIFFromFormat")]
		public static extern FREE_IMAGE_FORMAT GetFIFFromFormat(string format);
		
		[DllImport(dllName, EntryPoint="FreeImage_GetFIFFromMime")]
		public static extern FREE_IMAGE_FORMAT GetFIFFromMime(string mime);
		
		[DllImport(dllName, EntryPoint="FreeImage_GetFormatFromFIF")]
		public static extern string GetFormatFromFIF(FREE_IMAGE_FORMAT format);
		
		[DllImport(dllName, EntryPoint="FreeImage_GetFIFExtensionList")]
		public static extern string GetFIFExtensionList(FREE_IMAGE_FORMAT format);
		
		[DllImport(dllName, EntryPoint="FreeImage_GetFIFDescription")]
		public static extern string GetFIFDescription(FREE_IMAGE_FORMAT format);
		
		[DllImport(dllName, EntryPoint="FreeImage_GetFIFRegExpr")]
		public static extern string GetFIFRegExpr(FREE_IMAGE_FORMAT format);
		
		[DllImport(dllName, EntryPoint="FreeImage_GetFIFFromFilename")]
		public static extern FREE_IMAGE_FORMAT GetFIFFromFilename(string filename);
		
		[DllImport(dllName, EntryPoint="FreeImage_FIFSupportsReading")]
		public static extern bool FIFSupportsReading(FREE_IMAGE_FORMAT format);
		
		[DllImport(dllName, EntryPoint="FreeImage_FIFSupportsWriting")]
		public static extern bool FIFSupportsWriting(FREE_IMAGE_FORMAT format);
		
		[DllImport(dllName, EntryPoint="FreeImage_FIFSupportsExportBPP")]
		public static extern bool FIFSupportsExportBPP(FREE_IMAGE_FORMAT format, int bpp);
		
		[DllImport(dllName, EntryPoint="FreeImage_FIFSupportsExportType")]
		public static extern bool FIFSupportsExportType(FREE_IMAGE_FORMAT format, FREE_IMAGE_TYPE ftype);
		
		[DllImport(dllName, EntryPoint="FreeImage_FIFSupportsICCProfiles")]
		public static extern bool FIFSupportsICCProfiles(FREE_IMAGE_FORMAT format, FREE_IMAGE_TYPE ftype);

		// Multipage interface ----------------------------------------

		[DllImport(dllName, EntryPoint="FreeImage_OpenMultiBitmap")]
		public static extern FIMULTIBITMAP OpenMultiBitmap(
			FREE_IMAGE_FORMAT format, string filename, bool createNew, bool readOnly, bool keepCacheInMemory, int flags);
		
		[DllImport(dllName, EntryPoint="FreeImage_CloseMultiBitmap")]
		public static extern long CloseMultiBitmap(FIMULTIBITMAP bitmap, int flags);
		
		[DllImport(dllName, EntryPoint="FreeImage_GetPageCount")]
		public static extern int GetPageCount(FIMULTIBITMAP bitmap);
		
		[DllImport(dllName, EntryPoint="FreeImage_AppendPage")]
		public static extern void AppendPage(FIMULTIBITMAP bitmap, FIBITMAP data);
		
		[DllImport(dllName, EntryPoint="FreeImage_InsertPage")]
		public static extern void InsertPage(FIMULTIBITMAP bitmap, int page, FIBITMAP data);
		
		[DllImport(dllName, EntryPoint="FreeImage_DeletePage")]
		public static extern void DeletePage(FIMULTIBITMAP bitmap, int page);
		
		[DllImport(dllName, EntryPoint="FreeImage_LockPage")]
		public static extern FIBITMAP LockPage(FIMULTIBITMAP bitmap, int page);
		
		[DllImport(dllName, EntryPoint="FreeImage_UnlockPage")]
		public static extern void UnlockPage(FIMULTIBITMAP bitmap, FIBITMAP data, bool changed);
		
		[DllImport(dllName, EntryPoint="FreeImage_MovePage")]
		public static extern bool MovePage(FIMULTIBITMAP bitmap, int target, int source);
		
		[DllImport(dllName, EntryPoint="FreeImage_GetLockedPageNumbers")]
		public static extern bool GetLockedPageNumbers(FIMULTIBITMAP bitmap, IntPtr pages, IntPtr count);
		
		// File type request routines ---------------------------------

		[DllImport(dllName, EntryPoint="FreeImage_GetFileType")]
		public static extern FREE_IMAGE_FORMAT GetFileType(string filename, int size);

		// missing FREE_IMAGE_FORMAT FreeImage_GetFileTypeFromHandle(FreeImageIO *io,
		// 			fi_handle handle, int size);

		[DllImport(dllName, EntryPoint="FreeImage_GetFileTypeFromMemory")]
		public static extern FREE_IMAGE_FORMAT GetFileTypeFromMemory(FIMEMORY stream, int size);

		// Image type request routines --------------------------------

		[DllImport(dllName, EntryPoint="FreeImage_GetImageType")]
		public static extern FREE_IMAGE_TYPE GetImageType(FIBITMAP dib);
		
		// FreeImage helper routines ------------------------------------------------

		[DllImport(dllName, EntryPoint="FreeImage_IsLittleEndian")]
		public static extern bool IsLittleEndian();
		
		[DllImport(dllName, EntryPoint="FreeImage_LookupX11Color")]
		public static extern bool LookupX11Color(string szColor, ref int red, ref int green, ref int blue);

		[DllImport(dllName, EntryPoint="FreeImage_LookupSVGColor")]
		public static extern bool LookupSVGColor(string szColor, ref int red, ref int green, ref int blue);

		// Pixel access functions -------------------------------------

		[DllImport(dllName, EntryPoint="FreeImage_GetBits")]
		public static extern IntPtr GetBits(FIBITMAP dib);
		
		[DllImport(dllName, EntryPoint="FreeImage_GetScanLine")]
		public static extern IntPtr GetScanLine(FIBITMAP dib, int scanline);
		
		[DllImport(dllName, EntryPoint="FreeImage_GetPixelIndex")]
		public static extern bool GetPixelIndex(FIBITMAP dib, uint x, uint y, ref byte value);
		
		[DllImport(dllName, EntryPoint="FreeImage_GetPixelColor")]
		public static extern bool GetPixelColor(FIBITMAP dib, uint x, uint y, 
			[Out, MarshalAs(UnmanagedType.LPStruct)]RGBQUAD value);
		
		[DllImport(dllName, EntryPoint="FreeImage_SetPixelIndex")]
		public static extern bool SetPixelIndex(FIBITMAP dib, uint x, uint y, ref byte value);

		[DllImport(dllName, EntryPoint="FreeImage_SetPixelColor")]
		public static extern bool SetPixelColor(FIBITMAP dib, uint x, uint y, 
			[In, MarshalAs(UnmanagedType.LPStruct)] RGBQUAD value);

		// DIB info routines --------------------------------------------------------
		
		[DllImport(dllName, EntryPoint="FreeImage_GetColorsUsed")]
		public static extern uint GetColorsUsed(FIBITMAP dib);
		
		[DllImport(dllName, EntryPoint="FreeImage_GetBPP")]
		public static extern uint GetBPP(FIBITMAP dib);
		
		[DllImport(dllName, EntryPoint="FreeImage_GetWidth")]
		public static extern uint GetWidth(FIBITMAP dib);
		
		[DllImport(dllName, EntryPoint="FreeImage_GetHeight")]
		public static extern uint GetHeight(FIBITMAP dib);
		
		[DllImport(dllName, EntryPoint="FreeImage_GetLine")]
		public static extern uint GetLine(FIBITMAP dib);
		
		[DllImport(dllName, EntryPoint="FreeImage_GetPitch")]
		public static extern uint GetPitch(FIBITMAP dib);
		
		[DllImport(dllName, EntryPoint="FreeImage_GetDIBSize")]
		public static extern uint GetDIBSize(FIBITMAP dib);
		
		[DllImport(dllName, EntryPoint="FreeImage_GetPalette")]
		[return: MarshalAs(UnmanagedType.LPArray)]
		public static extern RGBQUAD GetPalette(FIBITMAP dib);
		
		[DllImport(dllName, EntryPoint="FreeImage_GetDotsPerMeterX")]
		public static extern uint GetDotsPerMeterX(FIBITMAP dib);
		
		[DllImport(dllName, EntryPoint="FreeImage_GetDotsPerMeterY")]
		public static extern uint GetDotsPerMeterY(FIBITMAP dib);
		
		[DllImport(dllName, EntryPoint="FreeImage_GetInfoHeader")]
		[return: MarshalAs(UnmanagedType.LPStruct)]
		public static extern BITMAPINFOHEADER GetInfoHeader(FIBITMAP dib);
		
		[DllImport(dllName, EntryPoint="FreeImage_GetInfo")]
		[return: MarshalAs(UnmanagedType.LPStruct)]
		public static extern BITMAPINFO GetInfo(FIBITMAP dib);
		
		[DllImport(dllName, EntryPoint="FreeImage_GetColorType")]
		public static extern FREE_IMAGE_COLOR_TYPE GetColorType(FIBITMAP dib);
		
		[DllImport(dllName, EntryPoint="FreeImage_GetRedMask")]
		public static extern uint GetRedMask(FIBITMAP dib);
		
		[DllImport(dllName, EntryPoint="FreeImage_GetGreenMask")]
		public static extern uint GetGreenMask(FIBITMAP dib);
		
		[DllImport(dllName, EntryPoint="FreeImage_GetBlueMask")]
		public static extern uint GetBlueMask(FIBITMAP dib);
		
		[DllImport(dllName, EntryPoint="FreeImage_GetTransparencyCount")]
		public static extern uint GetTransparencyCount(FIBITMAP dib);
		
		[DllImport(dllName, EntryPoint="FreeImage_GetTransparencyTable")]
		public static extern IntPtr GetTransparencyTable(FIBITMAP dib);
		
		[DllImport(dllName, EntryPoint="FreeImage_SetTransparent")]
		public static extern void SetTransparent(FIBITMAP dib, bool enabled);
		
		[DllImport(dllName, EntryPoint="FreeImage_SetTransparencyTable")]
		public static extern void SetTransparencyTable(FIBITMAP dib, IntPtr table, int count);
